# matatu-game

./: Matatu_Game_Implementation_Guide.document.xml  Matatu_Game_Implementation_Guide.docx  README.md  pyproject.toml
.github/: copilot-instructions.md
matatu/: cli.py  cpu.py  engine.py  gui.py  types.py
